# yqzd

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MediaDownloader.cpp  MediaDownloader.h  PreviewWidget.cpp  PreviewWidget.h  PrivateURI.h  PropertyData.cpp  PropertyData.h  TODO.txt  YQZDGlobal.h  font.qrc  main.cpp
